--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic Tac Toe</title>
+    <title>Tic-Tac-Toe</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <div class="game-container">
+      <h1>Tic-Tac-Toe</h1>
+      <div class="gameboard"></div>
+      <button id="start-btn">Start Game</button>
+    </div>
+
     <script src="game.js"></script>
   </body>
 </html>
